--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                             alt=""></a>
                 </div>
                 <div class="col-md text-center pt-5">
-                    <a href="https://www.uc.cl/" target="_blank"> <img src="assets/img/logo-universidad-chile.png"
+                    <a href="https://www.uchile.cl/" target="_blank"> <img src="assets/img/logo-universidad-chile.png"
                             alt=""></a>
                 </div>
                 <div class="col-md text-center pt-5">
