--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 
     <!--logo + texto-->
     <div class="container img-txt mb-0 d-none d-sm-block d-sm-none d-md-block">
-        <div class="row">
-            <div class="col-4"><img src="assets/img/logo-wkshp.png" alt=""></div>
-            <div class="col-8">
+        <div class="row pb-5">
+            <div class="col-3"><img src="assets/img/logo-wkshp.png" alt=""></div>
+            <div class="col-9 align-self-center">
                 <div class="container">
                     <h2 class="txtcuadros cuadroverde shadow-sm">Santiago, 10 al 13 de octubre 2023</h2>
                     <p class="parrafo-1">Del 10 al 13 de octubre se realizará la cuarta versión del Workshop MIRO de
@@ -163,8 +163,10 @@
 
     <!--boton subir-->
 
-    <a  href="https://docs.google.com/forms/d/e/1FAIpQLSdeoTcWptHEWLqtRgrr3imBN0bdt8ry3WZwEGXRi-6QwZVMUQ/viewform"
-        target="_blank" class="boton-subirmbl sticky-top d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-xxl-none d-xxl-block"></a></div>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdeoTcWptHEWLqtRgrr3imBN0bdt8ry3WZwEGXRi-6QwZVMUQ/viewform"
+        target="_blank"
+        class="boton-subirmbl sticky-top d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-xxl-none d-xxl-block"></a>
+    </div>
 
 
     <!--img + texto-->
@@ -182,7 +184,7 @@
 
     <!--texto calendario-->
     <div
-        class="container pt-3 pb-5 bg-black d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-xxl-none d-xxl-block">
+        class="container-fluid pt-3 pb-5 bg-black d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-xxl-none d-xxl-block">
         <div id="" class="container pt-5"><!--falta agregar-->
             <p class="txttitulo p-1 mt-5"> PLAZOS</p>
 
@@ -214,14 +216,14 @@
 
     <!--ubicación mobile-->
     <div id="ubicacion2"
-        class="container pt-3 mt-5 d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-xxl-none d-xxl-block">
+        class="container-fluid pt-3 mt-5 d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-xxl-none d-xxl-block">
         <p class="txttitulo2 p-1 "> UBICACIÓN</p>
 
         <center>
             <hr class="mt-5 linea2 opacity-100 ">
         </center>
-            <p class="pt-3 parrafo-1 text-center">Auditorio N. Bralic, Instituto de Física, Pontificia Universidad Católica
-                de Chile - Campus San Joaquín</p>
+        <p class="pt-3 parrafo-1 text-center">Auditorio N. Bralic, Instituto de Física, Pontificia Universidad Católica
+            de Chile - Campus San Joaquín</p>
     </div>
 
 
@@ -241,34 +243,34 @@
         <div class="container">
             <div class="row">
                 <div class="col-md text-center pt-3">
-                    <p class="textofooter">Organiza:</p>
-                    <a href="https://www.miroptics.cl/" target="_blank"> <img src="assets/img/logo-miro-blanco.png"
+                    <p class="textofooter mb-lg-3">Organiza:</p>
+                    <a href="https://www.miroptics.cl/" target="_blank"> <img src="assets/img/logo-miro-blanco.png" 
                             alt=""></a>
                 </div>
                 <div class="col-md text-center pt-5">
-                    <a href="https://www.iniciativamilenio.cl/"> <img src="assets/img/logo-financia.png" alt=""></a>
+                    <a href="https://www.iniciativamilenio.cl/"> <img src="assets/img/logo-financia.png" class="mt-lg-3" alt=""></a>
                 </div>
                 <div class="col-md text-center pt-3">
-                    <p class="textofooter">Hospeda:</p>
+                    <p class="textofooter mb-lg-0">Hospeda:</p>
                     <a href="https://www.uc.cl" target="_blank"> <img src="assets/img/logo-universidad-catolica.png"
                             alt=""></a>
                 </div>
                 <div class="col-md text-center pt-3">
-                    <p class="textofooter">Participan</p>
+                    <p class="textofooter mb-lg-4">Participan</p>
                     <a href="https://www.udec.cl/pexterno/" target="_blank"> <img
-                            src="assets/img/logo-universidad-concepcion.png" alt=""></a>
+                            src="assets/img/logo-universidad-concepcion.png" class="mt-lg-1" alt=""></a>
                 </div>
                 <div class="col-md text-center pt-5">
                     <a href="https://www.usach.cl/" target="_blank"> <img src="assets/img/logo-universidad-santiago.png"
-                            alt=""></a>
+                            class="mt-lg-3" alt=""></a>
                 </div>
                 <div class="col-md text-center pt-5">
                     <a href="https://www.uchile.cl/" target="_blank"> <img src="assets/img/logo-universidad-chile.png"
-                            alt=""></a>
+                            class="mt-lg-3" alt=""></a>
                 </div>
                 <div class="col-md text-center pt-5">
                     <a href="https://uandes.cl/" target="_blank"> <img src="assets/img/logo-universidad-andes.png"
-                            alt=""></a>
+                            class="mt-lg-3 pt-lg-1" alt=""></a>
                 </div>
 
             </div>
