--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <!--img + texto-->
     <div
-        class="container pt-5 pb-5 img-txtmbl d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-xxl-none d-xxl-block">
+        class="pt-5 pb-5 img-txtmbl d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-xxl-none d-xxl-block">
 
         <div class="text-center pb-5"><img class="pb-5" src="assets/img/logo-wkshp.png" alt="">
             <h2 class="text-center txtcuadrosmbl shadow-sm mb-5">Santiago, 10 al 13 de octubre 2023</h2>
@@ -184,7 +184,7 @@
 
     <!--texto calendario-->
     <div
-        class="container-fluid pt-3 pb-5 bg-black d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-xxl-none d-xxl-block">
+        class="pt-3 pb-5 bg-black d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-xxl-none d-xxl-block">
         <div id="" class="container pt-5"><!--falta agregar-->
             <p class="txttitulo p-1 mt-5"> PLAZOS</p>
 
@@ -216,7 +216,7 @@
 
     <!--ubicación mobile-->
     <div id="ubicacion2"
-        class="container-fluid pt-3 mt-5 d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-xxl-none d-xxl-block">
+        class="pt-3 mt-5 d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-xxl-none d-xxl-block">
         <p class="txttitulo2 p-1 "> UBICACIÓN</p>
 
         <center>
