--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <!--boton subir-->
 
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdeoTcWptHEWLqtRgrr3imBN0bdt8ry3WZwEGXRi-6QwZVMUQ/viewform"
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScarWYE9biZVEA9nR1JYeORYJnRkTSn5wHfOPFL1zta_aV5Kw/viewform"
                 target="_blank" class="boton-subir sticky-top"></a></div>
         </nav>
 
@@ -102,7 +102,7 @@
             <div class="col-md-2 pt-5 text-center"><img src="assets/img/calendar.png" alt="">
             </div>
             <div class="col-md-4 pt-5 text-center">
-                <p class="txt-titulos">10 septiembre:</p>
+                <p class="txt-titulos">15 septiembre:</p>
                 <p class="txt-parrafo">cierre de inscripciones</p>
             </div>
 
@@ -120,8 +120,8 @@
 
         <div class="container pt-3 d-none d-sm-block d-sm-none d-md-block">
 
-            <p class="parrafo-1 text-center">Auditorio N. Bralic, Instituto de Física, Pontificia Universidad Católica
-                de Chile - Campus San Joaquín</p>
+            <p class="parrafo-1 text-center">Auditorio Padre Juan de Castro</p>
+            <p class="parrafo-1 text-center p-1">Escuela de Sicología. Pontificia Universidad Católica de Chile - Campus San Joaquín</p>
 
         </div>
 
@@ -163,7 +163,7 @@
 
     <!--boton subir-->
 
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdeoTcWptHEWLqtRgrr3imBN0bdt8ry3WZwEGXRi-6QwZVMUQ/viewform"
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScarWYE9biZVEA9nR1JYeORYJnRkTSn5wHfOPFL1zta_aV5Kw/viewform"
         target="_blank"
         class="boton-subirmbl sticky-top d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-xxl-none d-xxl-block"></a>
     </div>
@@ -208,7 +208,7 @@
                 <img src="assets/img/calendar.png" alt="">
             </div>
             <div class="col-9">
-                <p class="txt-titulos">10 septiembre:</p>
+                <p class="txt-titulos">15 septiembre:</p>
                 <p class="txt-parrafo">cierre de inscripciones</p>
             </div>
         </div>
@@ -222,16 +222,16 @@
         <center>
             <hr class="mt-5 linea2 opacity-100 ">
         </center>
-        <p class="pt-3 parrafo-1 text-center">Auditorio N. Bralic, Instituto de Física, Pontificia Universidad Católica
-            de Chile - Campus San Joaquín</p>
+        <p class="parrafo-1 text-center">Auditorio Padre Juan de Castro</p>
+            <p class="parrafo-1 text-center p-1">Escuela de Sicología. Pontificia Universidad Católica de Chile - Campus San Joaquín</p>
     </div>
 
 
 
     <!--MOBILE Y DESKTOP-->
     <iframe class="pt-5"
-        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13308.27419844047!2d-70.611128!3d-33.4995936!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662d00de90f8c85%3A0x5345f1e6d90f6a3a!2sInstituto%20de%20F%C3%ADsica%2C%20UC!5e0!3m2!1ses-419!2scl!4v1688154614376!5m2!1ses-419!2scl"
-        width="100%" height="550" style="border:0;" allowfullscreen="" loading="lazy"
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6654.2591937226925!2d-70.6151352!3d-33.4980052!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662d00e04ec5c23%3A0x2f92172e3add7da9!2sEscuela%20de%20Psicolog%C3%ADa%20UC!5e0!3m2!1ses-419!2scl!4v1694116897339!5m2!1ses-419!2scl"
+        width="100%" height="550" style="border: 0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
